<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/my_photo"
        app:srcCompat="@drawable/photo" />

    <TextView
        android:id="@+id/names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/nathan_ngari"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/names"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/names"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/track"
        android:layout_marginStart="50dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/track"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/country"
        android:layout_marginStart="50dp"
        android:textSize="18sp"  />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/country"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:layout_marginStart="50dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:layout_marginStart="50dp"
        android:textSize="18sp"  />

    <TextView
        android:id="@+id/slack"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/phone"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/slack_username"
        android:layout_marginStart="50dp"
        android:textSize="18sp"  />

    <TextView
        android:id="@+id/android"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/names"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:text="@string/android"
        android:layout_marginStart="130dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/kenya"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/track"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:text="@string/kenya"
        android:layout_marginStart="130dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/myemail"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/country"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:text="@string/maxmucks_gmail_com"
        android:layout_marginStart="130dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/email"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="20dp"
        android:text="@string/_254724476357"
        android:layout_marginStart="190dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/myuser"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/phone"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="20dp"
        android:text="@string/slack_user"
        android:layout_marginStart="190dp"
        android:textSize="18sp" />

</RelativeLayout>