<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/welcome_to_alc_4_0"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/about_alc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_edittext"
        android:textColor="#FFF"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/about_alc" />

    <Button
        android:id="@+id/MyProfile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_alc"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edittext"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/my_profile" />
</RelativeLayout>